Changes in Paladin 1.4

New Features
The luare command has been added -- a sed replacement which uses Lua regular expressions.
Project-wide file search and replace...FINALLY.

User Interface
Files are now sorted first by type and then by name
New files or new file pairs added via Add New File are automatically added to source control
Changed key accelerators for common source control from Control + Alt to Control + Alt + Shift due to the newly-added window management shortcuts which clash with the old ones
When files are added or removed from the repo via the GUI, their partner files are also added/removed.
Control + Alt + Shift + Up/Down are used to push to/pull from remote repositories
Add New File now includes templates for .rsrc resource files, generic text files, and bash shell scripts.
Added an option to choose whether or not header files are automatically added to projects.

Bugfixes
The dirty file count doesn't change during builds on SMP machines
Fixed a problem with files dropped from Tracker
Shell scripts are now executed properly
Automatically adjust types on .rsrc files so Edit Program Settings always works right.

Internal changes
Removed some hardcoded paths from certain parts of the code
The shell scripts used to build the suite have been made to dynamically build all C++ files in the Paladin folder.
Paladin now depends on the existence of the Lua language.