@@ -12,6 +12,7 @@ When files are added or removed from the repo via the GUI, their partner files a
 Control + Alt + Shift + Up/Down are used to push to/pull from remote repositories
 Add New File now includes templates for .rsrc resource files, generic text files, and bash shell scripts.
 Added an option to choose whether or not header files are automatically added to projects.
+Better build feedback when Paladin is used to build from the command line
 
 Bugfixes
 The dirty file count doesn't change during builds on SMP machines
